<resources>
    <string name="app_name">珍友趣</string>
    <string name="share">share</string>
    <string name="action_settings">设置</string>
    <string name="verification_code">验证码</string>
    <string name="demo_name_basemap">OEM视图</string>
    <string name="oem_view">厂家视图</string>
    <string name="distri_view">经销商视图</string>
    <string name="customer_view">珍友趣</string>
    <string name="add_user_info">添加用户信息</string>
    <string name="user_sign_up">注册</string>
    <string name="scan_input">扫描输入</string>
    <string name="scan_err">扫描结果异常，请重新扫描或手动输入!</string>
    <string name="reset_password">重置密码</string>
    <string name="add_customer_info">添加顾客信息</string>
    <string name="my_battery_list">我的设备列表</string>
    <string name="share_bat_list">分享我的轮椅</string>
    <string name="personal_info">设置</string>
    <string name="loc_refresh">位置刷新</string>
    <string name="login">登录</string>
    <string name="process_wait_title">请等待...</string>
    <string name="process_wait_msg">系统处理中...</string>
    <string name="select_all">全部</string>
    <string name="user_bat_list">我的设备列表</string>
    <string name="friend_bat_list">好友设备列表</string>
    <string name="sale_info">轮椅销售信息</string>
    <string name="my_bat_info">我的轮椅状态</string>
    <string name="friends_bat_info">好友轮椅状态</string>
    <string name="empty_follower_info">好友名字或号码不能为空</string>
    <string name="invalid_phone_number">手机号码无效！</string>
    <string name="positive_button">确定</string>
    <string name="negative_button">取消</string>
    <string name="update_button">更新</string>
    <string name="non_update_button">不更新</string>
    <string name="shared_pref_pacakge">com.yaheng</string>
    <string name="network_disconnect">网络未连接</string>
    <string name="getVerFail">（若未收到验证码，则有可能您已经注册。）</string>
    <string name="bat_note">（提示：以下黑色字体为您本人的设备，蓝色字体的为您的好友所共享的设备）</string>
    <string name="address_to_latlon">您所输入的地址不能正确转换成经纬度，您可以重新修改经销商的地址或者手动输入经销商经纬度。</string>
    <string name="dis_list">经销商列表</string>
    <string name="user_group_special">特殊用户</string>
    <string name="user_group_common">普通用户</string>
    <string name="update_app_download">正在为你下载应用程序更新，请稍候...</string>
    <string name="update_exit_confirm">应用程序正在更新，确认退出？</string>
    <string name="update_activity">应用程序更新</string>
    <string name="update_confirm">本更新将会耗费您一些流量，请您最好在WIFI连接下进行此更新!</string>
    <string name="battery_lock">布防:</string>
    <!--<string name="pre_url">http://sam.yahengcloud.com:8080/sam/</string>-->
    <string name="pre_url">http://114.55.33.1:8080/boyuan/</string>
    <!--<string name="pre_url">http://114.55.33.1:8080/sam/</string>-->
    <!--<string name="pre_url">http://192.168.1.101:8090/boyuan/</string>-->
    <string name="test_pre_url">http://101.231.206.30:9002/sam/</string>
    <string name="btyinfo">/user/btyinfo.json</string>
    <string name="btys">/user/btys.json</string>
    <string name="bty_share">/user/bty/share.json</string>
    <string name="bty_unshare">/user/bty/unshare.json</string>
    <string name="bty_followers">/user/bty/followers.json</string>
    <string name="reseller_btyinfo">/reseller/btyinfo.json</string>
    <string name="reseller_site">/reseller/site.json</string>
    <string name="reseller_infos">/reseller/infos.json</string>
    <string name="reseller_sales">/reseller/sales.json</string>
    <string name="user_forget">/user/forgot.json</string>
    <string name="open_sms">/open/sms.json</string>
    <string name="user_signin">/user/signin.json</string>
    <string name="open_ver">/open/ver.json"</string>
    <string name="realtime_loction">/user/btyinfo/real.json</string>
    <string name="sam_statement">本软件及系统由SAM公司提供</string>
    <string name="sam_info">info@sam-world.com</string>
    <string name="enter_user_account">请输入登录帐号</string>
    <string name="enter_password">请输入登录密码</string>
    <string name="imei_list">IMEIList</string>
    <string name="short_alert">该区域（室内、地下室等）可能搜索不到卫星GPS定位信号</string>
    <string name="long_alert">您好, 首次使用设备，需稍微等待数据上报!”</string>
    <string name="app_title">轨迹回放</string>
    <string name="start_trace">开始</string>
    <string name="stop_trace">停止</string>
    <string name="date">选择日期</string>
    <string name="fence_operator">操作</string>
    <string name="is_processed">纠偏</string>
    <string name="geo_fence">地理围栏</string>
    <string name="track_upload">当前位置</string>
    <string name="track_query">历史轨迹</string>
    <string name="history_track">  查询历史轨迹</string>
    <string name="realTime_track">查询实时轨迹</string>
    <string name="set_fence">设置围栏</string>
    <string name="delete_fence">删除围栏</string>
    <string name="fence_list">围栏列表</string>
    <string name="monitored_status">监控状态</string>
    <string name="history_alarm">历史报警</string>
    <string name="delay_alarm">延迟报警</string>
    <string name="fence_name">围栏名称</string>
    <string name="fence_desc">围栏描述</string>
    <string name="fence_radius">围栏半径</string>
    <string name="select_date">轨迹日期</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="menu_first">第一页</string>
    <string name="menu_second">第二页</string>
    <string name="menu_third">第三页</string>

    <string name="menu_home">首页</string>
    <string name="menu_loc">定位服务</string>
    <string name="menu_publish">发布</string>
    <string name="menu_friends">友圈</string>
    <string name="menu_me">我</string>
    <string name="title_activity_set_sos_phone_acivity">SetSosPhoneAcivity</string>


    <string name="menu_online_directly">线上直营</string>
    <string name="menu_physical_store">实体店</string>
    <string name="menu_online_consulting">在线咨询</string>
    <string name="menu_suggestions">意见与建议</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="expressnumberhit">请输入单号</string>
    <string name="buttonPhoto">拍照</string>
    <string name="buttonGallery">获取图片</string>


    <string name="express">快递公司</string>
    <string name="expressnum">快递单号</string>
    <string name="createdata">创建时间</string>
    <string name="userdescribe">用户描述</string>
    <string name="beizdescribe">贝珍描述</string>
    <string name="state">状态</string>
    <string name="name">用户名</string>
    <string name="back_express">回寄快递</string>
    <string name="back_expressnum">回寄单号</string>


    <string name="advanced">advanced</string>
    <string name="github">show on GitHub</string>
    <string name="github_url">https://github.com/jeroenmols/LandscapeVideoCamera</string>
    <string name="show_timer">计时显示</string>
    <string name="allow_frontcamera">Allow front facing camera</string>
    <string name="privacy">privacy policy</string>
    <string name="privacy_url">http://jeroenmols.com/apps/landscapevideocamera/privacy_policy.html</string>
    <string name="enter_fps_hint">Enter FPS</string>
    <string name="video_text">发送文字到我的友圈</string>
    <string name="capture_video">捕获视频</string>

    <string name="status_nocapture">无视频文件</string>
    <string name="status_capturesuccess">Capture successful: %s</string>
    <string name="status_capturecancelled">拍摄被用户终止</string>
    <string name="status_capturefailed">捕获视频失败</string>

    <string name="filename_hint">e.g. myVideo.mp4</string>
    <string name="duration_hint">maximum duration</string>
    <string name="duration_unit">sec</string>
    <string name="filesize_hint">maximum filesize</string>
    <string name="filesize_unit">Mb</string>


    <string name="expresshint">如有快递号，请在此输入</string>
</resources>
