<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/store_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/image_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:scaleType="fitXY"
            android:src="@drawable/beiz_shop"
            android:adjustViewBounds="true"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RadioGroup
                    android:id="@+id/store_radio_group"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <RadioButton
                        android:gravity="center"
                        android:checked="true"
                        android:id="@+id/online_directly"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:button="@null"
                        android:text="@string/menu_online_directly"
                        android:background="@drawable/store_tabbar_bg"
                        android:textColor="@drawable/radio_btn_font_style"/>
                    <RadioButton
                        android:gravity="center"
                        android:id="@+id/physical_store"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:button="@null"
                        android:background="@drawable/store_tabbar_bg"
                        android:textColor="@drawable/radio_btn_font_style"
                        android:text="@string/menu_physical_store"/>
                    <RadioButton
                        android:gravity="center"
                        android:id="@+id/online_consulting"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:button="@null"
                        android:background="@drawable/store_tabbar_bg"
                        android:textColor="@drawable/radio_btn_font_style"
                        android:text="@string/menu_online_consulting"/>
                    <RadioButton
                        android:gravity="center"
                        android:id="@+id/suggestions"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:button="@null"
                        android:background="@drawable/store_tabbar_bg"
                        android:textColor="@drawable/radio_btn_font_style"
                        android:text="@string/menu_suggestions"/>

                </RadioGroup>

                <ImageView
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#33808080"/>

                <RelativeLayout
                    android:id="@+id/item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                </RelativeLayout>

            </LinearLayout>









        </FrameLayout>



    </LinearLayout>









    <!--<LinearLayout-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:paddingLeft="20dp"-->
        <!--android:paddingRight="20dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->




        <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="4"-->
            <!--android:text="线上直营"-->
            <!--android:textSize="16sp"/>-->
        <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="3"-->
            <!--android:textSize="16sp"-->
            <!--android:text="实体店"/>-->
        <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="4"-->
            <!--android:textSize="16sp"-->
            <!--android:text="在线咨询"/>-->
        <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="5"-->
            <!--android:textSize="16sp"-->
            <!--android:text="意见与建议"/>-->

    <!--</LinearLayout>-->




    <!--<LinearLayout-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="80dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
            <!--android:id="@+id/taobao_img"-->
            <!--android:layout_marginLeft="0dp"-->
            <!--android:layout_width="72dp"-->
            <!--android:layout_height="72dp"-->
            <!--android:src="@drawable/taobao"/>-->

    <!--</LinearLayout>-->






        <!--<ImageView-->
            <!--android:layout_marginTop="100dp"-->
           <!--android:layout_gravity="center"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/beizstorelogo"-->
            <!--/>-->





</LinearLayout>
